--- a/Object/.classpath
+++ b/Object/.classpath
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="db/" kind="src" path="src"/>
 	<classpathentry kind="lib" path="jsoup-1.13.1.jar"/>
+	<classpathentry kind="lib" path="src/Email/activation.jar"/>
+	<classpathentry kind="lib" path="src/Email/mail.jar"/>
+	<classpathentry kind="lib" path="src/mail.jar"/>
+	<classpathentry kind="lib" path="src/activation.jar"/>
+	<classpathentry kind="lib" path="json-20200518.jar"/>
+	<classpathentry kind="lib" path="mysql-connector-java-5.1.40-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
